--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
       <id>local-deploy-repo</id>
       <url>file:///C:/Users/ElaineLee/Documents/deploy-repo</url>
     </repository>
+    <site>
+      <id>website</id>
+      <url>file:///C:/Users/ElaineLee/Documents/deploy-site</url>
+    </site>
   </distributionManagement>
 
   <properties>
